[package]
name = "minerva"
version = "0.1.0"
authors = ["Tucker Morgan <tucker.bull.morgan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
num_cpus = "1.13.0"
rayon = "1.5"
rand = "0.8.0"